# burpH5

./: .gitignore  README.md  app.py  requirements.txt  startburph5.bat  关闭burph5.bat  启动burph5.bat
backend/: .gitignore  README.md  pyproject.toml  temp-req.txt
backend/src/burph5/: cli.py  config.py  main.py  mcp_server.py  models.py  service.py
backend/src/burph5.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/src/burph5/services/: certificates.py  parser.py  proxy.py  proxy_capture.py  proxy_transport.py  replay.py  storage.py
backend/tests/: test_core.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: client.ts
frontend/src/components/: CodeEditor.vue
frontend/src/router/: index.ts
frontend/src/stores/: workspace.ts
frontend/src/types/: api.ts
frontend/src/views/: CollectionsView.vue  HistoryView.vue  ProxyFlowsView.vue  RepeaterView.vue  SettingsView.vue
